syntax = "proto3";

package oauthcredentials.v1;

option go_package = "github.com/microserv-io/oauth-credentials-server/pkg/proto/oauthcredentials/v1;oauthcredentials";

service OAuthProviderService {
  rpc ListProviders(ListProvidersRequest) returns (stream ListProvidersResponse) {}
  rpc CreateProvider(CreateProviderRequest) returns (CreateProviderResponse) {}
  rpc UpdateProvider(UpdateProviderRequest) returns (UpdateProviderResponse) {}
  rpc DeleteProvider(DeleteProviderRequest) returns (DeleteProviderResponse) {}
  rpc ExchangeAuthorizationCode(ExchangeAuthorizationCodeRequest) returns (ExchangeAuthorizationCodeResponse) {}
}

message ListProvidersRequest {}

message ListProvidersResponse {
  repeated OAuthProvider oauth_providers = 1;
}

message CreateProviderRequest {
  string name = 1;
  string client_id = 2;
  string client_secret = 3;
  string redirect_uri = 4;
  repeated string scopes = 5;
  string auth_url = 6;
  string token_url = 7;
}

message CreateProviderResponse {
  OAuthProvider oauth_provider = 1;
}

message UpdateProviderRequest {
  string id = 1;
  string name = 2;
  string client_id = 3;
  string client_secret = 4;
  string redirect_uri = 5;
  repeated string scopes = 6;
  string auth_url = 7;
  string token_url = 8;
}

message UpdateProviderResponse {
  OAuthProvider oauth_provider = 1;
}

message DeleteProviderRequest {
  string id = 1;
}

message DeleteProviderResponse {}

message ExchangeAuthorizationCodeRequest {
  string provider = 1;
  string owner = 2;
  string code = 3;
}

message ExchangeAuthorizationCodeResponse {}

message OAuthProvider {
  string id = 1;
  string name = 2;
  string client_id = 3;
  string client_secret = 4;
  string redirect_uri = 5;
  repeated string scopes = 6;
  string auth_url = 7;
  string token_url = 8;
}
